--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.27.1
-pandas==2.0.3
-snowflake-connector-python==3.2.0
-snowflake-sqlalchemy==1.5.0
+matplotlib==3.3.4
+pandas==1.1.5
+plotly==5.17.0
+snowflake==0.0.4
+snowflake_sqlalchemy==1.3.4
+streamlit==1.10.0
